--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "aos": "^2.3.4",
     "mdbreact": "^4.23.0",
     "react": "^16.12.0",
+    "react-animate-on-scroll": "^2.1.5",
     "react-bootstrap-carousel": "^4.0.1",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
