--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "react-bootstrap-carousel": "^4.0.1",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "^3.4.0"
+    "react-scripts": "^3.4.0",
+    "react-scroll-to-component": "^1.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
