--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "react-animate-on-scroll": "^2.1.5",
     "react-bootstrap-carousel": "^4.0.1",
     "react-dom": "^16.12.0",
+    "react-fade-in": "^0.1.8",
+    "react-reveal": "^1.2.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.4.0",
     "react-scroll-to-component": "^1.0.2"
