--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-bootstrap-carousel": "^4.0.1",
     "react-dom": "^16.12.0",
     "react-fade-in": "^0.1.8",
+    "react-ga": "^2.7.0",
     "react-reveal": "^1.2.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.4.0",
